fix: decrease z-index for the item-viewer separator handle

--- a/views/scss/item-creator.scss
+++ b/views/scss/item-creator.scss
@@ -797,7 +797,7 @@ img.dragging.ui-draggable-dragging {
     position: absolute;
     top: 50%;
     right: calc(-1 * $itemCreatorSeparatorSize / 2);
-    z-index: 10000001;
+    z-index: 1000;
     cursor: pointer;
     user-select: none;
 
